fix: remove attribution, update title
style: add transition to link on hover, customize scrollbar,
fix container height, add scaleIn animation to card

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -38,7 +38,7 @@ body {
 .container {
   padding: 1.5rem;
 
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   place-items: center;
 }
@@ -52,6 +52,17 @@ body {
 
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+
+  animation: scaleIn 0.2s forwards;
+}
+
+@keyframes scaleIn {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 .card__banner img {
@@ -134,6 +145,10 @@ body {
   font-weight: 700;
 }
 
+.card-info__right a {
+  transition: 0.2s;
+}
+
 .card-info__right a:hover {
   color: var(--hover-state);
   text-decoration: none;
@@ -182,19 +197,20 @@ body {
   color: var(--dark-blue);
 }
 
-.attribution {
-  font-size: 11px;
-  text-align: center;
-  padding-block: 0.2rem;
+*::-webkit-scrollbar {
+  width: 4px;
   background-color: var(--pale-blue);
-  border-top: thin solid hsla(229, 6%, 66%, 0.2);
-
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
 }
 
-.attribution a {
-  color: var(--dark-blue);
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: var(--bright-blue);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--hover-state);
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: var(--dark-blue);
 }
